--- a/test-kit-mcu.ioc
+++ b/test-kit-mcu.ioc
@@ -1,27 +1,31 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.CommonPathInternal=null|null|null|null
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,SingleDiff-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
 ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SingleDiff-1\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_VOPAMP3_ADC2
-ADC2.CommonPathInternal=null|null|null|null
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
-ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC3.CommonPathInternal=null|null|null|null
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
+ADC3.master=1
+ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC4.CommonPathInternal=null|null|null|null
-ADC4.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC4.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,SingleDiff-0\#ChannelRegularConversion,CommonPathInternal
 ADC4.NbrOfConversionFlag=1
 ADC4.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC4.Rank-0\#ChannelRegularConversion=1
 ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC5.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_VOPAMP4
+ADC4.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
+ADC5.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR_ADC5
 ADC5.CommonPathInternal=ADC_CHANNEL_VREFINT|ADC_CHANNEL_TEMPSENSOR_ADC1|null|null
 ADC5.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
 ADC5.NbrOfConversionFlag=1
@@ -35,146 +39,117 @@ FDCAN1.CalculateTimeBitNominal=500
 FDCAN1.CalculateTimeQuantumNominal=100.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
-GPIO.groupedBy=
-I2C1.IPParameters=Timing
-I2C1.Timing=0x30909DEC
+GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
 I2C3.Timing=0x30909DEC
+I2C4.IPParameters=Timing
+I2C4.Timing=0x30909DEC
 KeepUserPlacement=false
 Mcu.CPN=STM32G473QET6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
-Mcu.IP1=ADC2
-Mcu.IP10=OPAMP2
-Mcu.IP11=OPAMP3
-Mcu.IP12=OPAMP4
-Mcu.IP13=OPAMP5
-Mcu.IP14=RCC
-Mcu.IP15=RTC
-Mcu.IP16=SPI1
-Mcu.IP17=SPI2
-Mcu.IP18=SPI4
-Mcu.IP19=SYS
+Mcu.IP1=ADC3
+Mcu.IP10=RCC
+Mcu.IP11=RTC
+Mcu.IP12=SPI1
+Mcu.IP13=SPI2
+Mcu.IP14=SYS
+Mcu.IP15=TIM2
+Mcu.IP16=TIM4
+Mcu.IP17=USART2
+Mcu.IP18=USART3
 Mcu.IP2=ADC4
-Mcu.IP20=TIM2
-Mcu.IP21=TIM3
-Mcu.IP22=TIM4
-Mcu.IP23=USART1
-Mcu.IP24=USART2
 Mcu.IP3=ADC5
 Mcu.IP4=DAC1
 Mcu.IP5=DAC2
 Mcu.IP6=FDCAN1
-Mcu.IP7=I2C1
-Mcu.IP8=I2C3
+Mcu.IP7=I2C3
+Mcu.IP8=I2C4
 Mcu.IP9=NVIC
-Mcu.IPNb=25
+Mcu.IPNb=19
 Mcu.Name=STM32G473Q(B-C-E)Tx
 Mcu.Package=LQFP128
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PF5
-Mcu.Pin100=VP_SYS_VS_DBSignals
-Mcu.Pin101=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin102=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin11=PF7
-Mcu.Pin12=PF8
-Mcu.Pin13=PF9
-Mcu.Pin14=PF10
-Mcu.Pin15=PF0-OSC_IN
-Mcu.Pin16=PF1-OSC_OUT
-Mcu.Pin17=PC0
-Mcu.Pin18=PC1
-Mcu.Pin19=PC2
+Mcu.Pin10=PC0
+Mcu.Pin11=PC1
+Mcu.Pin12=PC2
+Mcu.Pin13=PC3
+Mcu.Pin14=PA0
+Mcu.Pin15=PA1
+Mcu.Pin16=PA2
+Mcu.Pin17=PA3
+Mcu.Pin18=PA4
+Mcu.Pin19=PA5
 Mcu.Pin2=PE4
-Mcu.Pin20=PC3
-Mcu.Pin21=PF2
-Mcu.Pin22=PA0
-Mcu.Pin23=PA1
-Mcu.Pin24=PA2
-Mcu.Pin25=PA3
-Mcu.Pin26=PA4
-Mcu.Pin27=PA5
-Mcu.Pin28=PA6
-Mcu.Pin29=PA7
+Mcu.Pin20=PA6
+Mcu.Pin21=PC4
+Mcu.Pin22=PC5
+Mcu.Pin23=PF14
+Mcu.Pin24=PF15
+Mcu.Pin25=PE7
+Mcu.Pin26=PE8
+Mcu.Pin27=PE9
+Mcu.Pin28=PE10
+Mcu.Pin29=PE11
 Mcu.Pin3=PE5
-Mcu.Pin30=PC4
-Mcu.Pin31=PC5
-Mcu.Pin32=PB0
-Mcu.Pin33=PB1
-Mcu.Pin34=PB2
-Mcu.Pin35=PF11
-Mcu.Pin36=PF12
-Mcu.Pin37=PF13
-Mcu.Pin38=PF14
-Mcu.Pin39=PF15
+Mcu.Pin30=PE12
+Mcu.Pin31=PE13
+Mcu.Pin32=PE14
+Mcu.Pin33=PE15
+Mcu.Pin34=PB10
+Mcu.Pin35=PB11
+Mcu.Pin36=PB13
+Mcu.Pin37=PD10
+Mcu.Pin38=PD11
+Mcu.Pin39=PD13
 Mcu.Pin4=PE6
-Mcu.Pin40=PE8
-Mcu.Pin41=PE10
-Mcu.Pin42=PE11
-Mcu.Pin43=PE12
-Mcu.Pin44=PE14
-Mcu.Pin45=PE15
-Mcu.Pin46=PB11
-Mcu.Pin47=PB12
-Mcu.Pin48=PB13
-Mcu.Pin49=PB15
+Mcu.Pin40=PD14
+Mcu.Pin41=PC6
+Mcu.Pin42=PC7
+Mcu.Pin43=PG2
+Mcu.Pin44=PG3
+Mcu.Pin45=PG4
+Mcu.Pin46=PC8
+Mcu.Pin47=PC9
+Mcu.Pin48=PA8
+Mcu.Pin49=PA9
 Mcu.Pin5=PC13
-Mcu.Pin50=PD8
-Mcu.Pin51=PD9
-Mcu.Pin52=PD10
-Mcu.Pin53=PD11
-Mcu.Pin54=PD12
-Mcu.Pin55=PD13
-Mcu.Pin56=PD14
-Mcu.Pin57=PC6
-Mcu.Pin58=PC7
-Mcu.Pin59=PG2
+Mcu.Pin50=PA10
+Mcu.Pin51=PA11
+Mcu.Pin52=PA13
+Mcu.Pin53=PA14
+Mcu.Pin54=PA15
+Mcu.Pin55=PC10
+Mcu.Pin56=PC11
+Mcu.Pin57=PC12
+Mcu.Pin58=PG7
+Mcu.Pin59=PG8
 Mcu.Pin6=PC14-OSC32_IN
-Mcu.Pin60=PG3
-Mcu.Pin61=PG4
-Mcu.Pin62=PC8
-Mcu.Pin63=PC9
-Mcu.Pin64=PA8
-Mcu.Pin65=PA9
-Mcu.Pin66=PA10
-Mcu.Pin67=PA11
-Mcu.Pin68=PA12
-Mcu.Pin69=PA13
+Mcu.Pin60=PD0
+Mcu.Pin61=PD1
+Mcu.Pin62=PD3
+Mcu.Pin63=PD4
+Mcu.Pin64=PD6
+Mcu.Pin65=PD7
+Mcu.Pin66=PB3
+Mcu.Pin67=PB4
+Mcu.Pin68=PB6
+Mcu.Pin69=PB7
 Mcu.Pin7=PC15-OSC32_OUT
-Mcu.Pin70=PF6
-Mcu.Pin71=PA14
-Mcu.Pin72=PA15
-Mcu.Pin73=PC10
-Mcu.Pin74=PC11
-Mcu.Pin75=PC12
-Mcu.Pin76=PG7
-Mcu.Pin77=PG8
-Mcu.Pin78=PD0
-Mcu.Pin79=PD1
-Mcu.Pin8=PF3
-Mcu.Pin80=PD3
-Mcu.Pin81=PD4
-Mcu.Pin82=PD6
-Mcu.Pin83=PD7
-Mcu.Pin84=PB3
-Mcu.Pin85=PB4
-Mcu.Pin86=PB6
-Mcu.Pin87=PB7
-Mcu.Pin88=PB8-BOOT0
-Mcu.Pin89=PB9
-Mcu.Pin9=PF4
-Mcu.Pin90=PE0
-Mcu.Pin91=PE1
-Mcu.Pin92=VP_ADC2_OPAMP_INTERNAL2
-Mcu.Pin93=VP_ADC2_OPAMP_INTERNAL3
-Mcu.Pin94=VP_ADC5_OPAMP_INTERNAL4
-Mcu.Pin95=VP_ADC5_OPAMP_INTERNAL5
-Mcu.Pin96=VP_ADC5_TempSens_Input
-Mcu.Pin97=VP_ADC5_Vref_Input
-Mcu.Pin98=VP_RTC_VS_RTC_Activate
-Mcu.Pin99=VP_SYS_VS_Systick
-Mcu.PinsNb=103
+Mcu.Pin70=PB8-BOOT0
+Mcu.Pin71=PB9
+Mcu.Pin72=PE0
+Mcu.Pin73=PE1
+Mcu.Pin74=VP_ADC5_TempSens_Input
+Mcu.Pin75=VP_ADC5_Vref_Input
+Mcu.Pin76=VP_RTC_VS_RTC_Activate
+Mcu.Pin77=VP_SYS_VS_Systick
+Mcu.Pin78=VP_SYS_VS_DBSignals
+Mcu.Pin79=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin8=PF0-OSC_IN
+Mcu.Pin9=PF1-OSC_OUT
+Mcu.PinsNb=80
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G473QETx
@@ -191,20 +166,16 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0.Locked=true
-PA0.Mode=IN1-Single-Ended
+PA0.Mode=IN1-Differential
 PA0.Signal=ADC1_IN1
-PA1.Locked=true
-PA1.Mode=PGA_Internally_Connected
-PA1.Signal=OPAMP3_VINP
+PA1.Mode=IN1-Differential
+PA1.Signal=ADC1_IN2
 PA10.Locked=true
 PA10.Mode=Full_Duplex_Master
 PA10.Signal=SPI2_MISO
 PA11.Locked=true
 PA11.Mode=Full_Duplex_Master
 PA11.Signal=SPI2_MOSI
-PA12.Locked=true
-PA12.Signal=S_TIM4_CH2
 PA13.Mode=JTAG_5_pins
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=JTAG_5_pins
@@ -220,44 +191,27 @@ PA3.Signal=USART2_RX
 PA4.Signal=COMP_DAC11_group
 PA5.Signal=COMP_DAC12_group
 PA6.Signal=COMP_DAC21_group
-PA7.Locked=true
-PA7.Mode=PGA_Internally_Connected
-PA7.Signal=OPAMP2_VINP
-PA8.Locked=true
 PA8.Mode=IN1-Differential
 PA8.Signal=ADC5_IN1
-PA9.Locked=true
 PA9.Mode=IN1-Differential
 PA9.Signal=ADC5_IN2
-PB0.Locked=true
-PB0.Mode=IN15-Single-Ended
-PB0.Signal=ADC1_IN15
-PB1.Locked=true
-PB1.Mode=IN12-Single-Ended
-PB1.Signal=ADC1_IN12
-PB11.Mode=PGA_Internally_Connected
-PB11.Signal=OPAMP4_VINP
-PB12.Locked=true
-PB12.Mode=IN11-Single-Ended
-PB12.Signal=ADC1_IN11
+PB10.Locked=true
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Locked=true
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
-PB15.Locked=true
-PB15.Mode=IN15-Single-Ended
-PB15.Signal=ADC2_IN15
-PB2.Locked=true
-PB2.Mode=IN12-Single-Ended
-PB2.Signal=ADC2_IN12
 PB3.Mode=JTAG_5_pins
 PB3.Signal=SYS_JTDO-SWO
 PB4.Mode=JTAG_5_pins
 PB4.Signal=SYS_JTRST
 PB6.Signal=S_TIM4_CH1
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
-PB8-BOOT0.Mode=I2C
-PB8-BOOT0.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Signal=S_TIM4_CH2
+PB8-BOOT0.Signal=S_TIM4_CH3
 PB9.Locked=true
 PB9.Signal=S_TIM4_CH4
 PC0.Locked=true
@@ -298,16 +252,13 @@ PD0.Signal=FDCAN1_RX
 PD1.Locked=true
 PD1.Mode=FDCAN_Activate
 PD1.Signal=FDCAN1_TX
-PD10.Mode=IN7-Single-Ended
-PD10.Signal=ADC5_IN7
-PD11.Mode=IN8-Single-Ended
-PD11.Signal=ADC5_IN8
-PD12.Locked=true
-PD12.Mode=PGA_Internally_Connected
-PD12.Signal=OPAMP5_VINP
-PD13.Mode=IN10-Single-Ended
+PD10.Mode=IN7-Differential
+PD10.Signal=ADC3_IN7
+PD11.Mode=IN7-Differential
+PD11.Signal=ADC3_IN8
+PD13.Mode=IN10-Differential
 PD13.Signal=ADC4_IN10
-PD14.Mode=IN11-Single-Ended
+PD14.Mode=IN10-Differential
 PD14.Signal=ADC4_IN11
 PD3.Signal=S_TIM2_CH1
 PD4.Locked=true
@@ -316,72 +267,48 @@ PD6.Locked=true
 PD6.Signal=S_TIM2_CH4
 PD7.Locked=true
 PD7.Signal=S_TIM2_CH3
-PD8.Mode=IN12-Single-Ended
-PD8.Signal=ADC4_IN12
-PD9.Mode=IN13-Single-Ended
-PD9.Signal=ADC4_IN13
 PE0.Locked=true
-PE0.Mode=Asynchronous
-PE0.Signal=USART1_TX
+PE0.Signal=GPIO_Output
 PE1.Locked=true
-PE1.Mode=Asynchronous
-PE1.Signal=USART1_RX
-PE10.Mode=IN14-Single-Ended
-PE10.Signal=ADC5_IN14
-PE11.Mode=IN15-Single-Ended
-PE11.Signal=ADC5_IN15
+PE1.Signal=GPIO_Output
+PE10.Locked=true
+PE10.Signal=GPIO_Output
+PE11.Locked=true
+PE11.Signal=GPIO_Output
 PE12.Locked=true
-PE12.Mode=Full_Duplex_Master
-PE12.Signal=SPI4_SCK
-PE14.Mode=IN1-Single-Ended
-PE14.Signal=ADC4_IN1
-PE15.Mode=IN2-Single-Ended
-PE15.Signal=ADC4_IN2
-PE2.Signal=S_TIM3_CH1
+PE12.Signal=GPIO_Output
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.Locked=true
+PE14.Signal=GPIO_Output
+PE15.Locked=true
+PE15.Signal=GPIO_Output
+PE2.Locked=true
+PE2.Signal=GPIO_Output
 PE3.Locked=true
-PE3.Signal=S_TIM20_CH2
+PE3.Signal=GPIO_Output
 PE4.Locked=true
-PE4.Signal=S_TIM3_CH3
+PE4.Signal=GPIO_Output
 PE5.Locked=true
-PE5.Mode=Full_Duplex_Master
-PE5.Signal=SPI4_MISO
+PE5.Signal=GPIO_Output
 PE6.Locked=true
-PE6.Mode=Full_Duplex_Master
-PE6.Signal=SPI4_MOSI
-PE8.Mode=IN6-Single-Ended
-PE8.Signal=ADC5_IN6
+PE6.Signal=GPIO_Output
+PE7.Locked=true
+PE7.Signal=GPIO_Output
+PE8.Locked=true
+PE8.Signal=GPIO_Output
+PE9.Locked=true
+PE9.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
-PF0-OSC_IN.Signal=GPIO_Output
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Locked=true
-PF1-OSC_OUT.Signal=GPIO_Output
-PF10.Locked=true
-PF10.Signal=GPIO_Output
-PF11.Locked=true
-PF11.Signal=GPIO_Output
-PF12.Locked=true
-PF12.Signal=GPIO_Output
-PF13.Locked=true
-PF13.Signal=GPIO_Output
-PF14.Locked=true
-PF14.Signal=GPIO_Output
-PF15.Locked=true
-PF15.Signal=GPIO_Output
-PF2.Locked=true
-PF2.Signal=GPIO_Output
-PF3.Locked=true
-PF3.Signal=GPIO_Output
-PF4.Locked=true
-PF4.Signal=GPIO_Output
-PF5.Locked=true
-PF5.Signal=GPIO_Output
-PF6.Locked=true
-PF6.Signal=GPIO_Output
-PF7.Locked=true
-PF7.Signal=GPIO_Output
-PF8.Locked=true
-PF8.Signal=GPIO_Output
-PF9.Locked=true
-PF9.Signal=GPIO_Output
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
+PF14.Mode=I2C
+PF14.Signal=I2C4_SCL
+PF15.Mode=I2C
+PF15.Signal=I2C4_SDA
 PG2.Mode=Full_Duplex_Master
 PG2.Signal=SPI1_SCK
 PG3.Mode=Full_Duplex_Master
@@ -422,7 +349,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC4_Init-ADC4-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_DAC2_Init-DAC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true,13-MX_TIM4_Init-TIM4-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true,15-MX_USART1_UART_Init-USART1-false-HAL-true,16-MX_USART2_UART_Init-USART2-false-HAL-true,17-MX_ADC2_Init-ADC2-false-HAL-true,18-MX_ADC5_Init-ADC5-false-HAL-true,19-MX_OPAMP2_Init-OPAMP2-false-HAL-true,20-MX_OPAMP3_Init-OPAMP3-false-HAL-true,21-MX_OPAMP4_Init-OPAMP4-false-HAL-true,22-MX_OPAMP5_Init-OPAMP5-false-HAL-true,23-MX_ADC1_Init-ADC1-false-HAL-true,24-MX_ADC3_Init-ADC3-false-HAL-true,25-MX_FDCAN1_Init-FDCAN1-false-HAL-true,26-MX_SPI4_Init-SPI4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC4_Init-ADC4-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_DAC2_Init-DAC2-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_ADC2_Init-ADC2-false-HAL-true,15-MX_ADC5_Init-ADC5-false-HAL-true,16-MX_ADC1_Init-ADC1-false-HAL-true,17-MX_FDCAN1_Init-FDCAN1-false-HAL-true,18-MX_I2C4_Init-I2C4-false-HAL-true,19-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADC12Freq_Value=160000000
 RCC.ADC345Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -478,25 +405,21 @@ SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2
 SH.COMP_DAC12_group.ConfNb=1
 SH.COMP_DAC21_group.0=DAC2_OUT1,DAC_OUT1
 SH.COMP_DAC21_group.ConfNb=1
-SH.S_TIM20_CH2.0=TIM20_CH2
-SH.S_TIM20_CH2.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
 SH.S_TIM2_CH3.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH3.0=TIM3_CH3
-SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
 SH.S_TIM4_CH1.ConfNb=1
-SH.S_TIM4_CH2.0=TIM4_CH2
+SH.S_TIM4_CH2.0=TIM4_CH2,Input_Capture2_from_TI2
 SH.S_TIM4_CH2.ConfNb=1
-SH.S_TIM4_CH4.0=TIM4_CH4
+SH.S_TIM4_CH3.0=TIM4_CH3,Input_Capture3_from_TI3
+SH.S_TIM4_CH3.ConfNb=1
+SH.S_TIM4_CH4.0=TIM4_CH4,Input_Capture4_from_TI4
 SH.S_TIM4_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=80.0 MBits/s
@@ -510,30 +433,20 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI4.CalculateBaudRate=80.0 MBits/s
-SPI4.Direction=SPI_DIRECTION_2LINES
-SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI4.Mode=SPI_MODE_MASTER
-SPI4.VirtualType=VM_MASTER
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM4.IPParameters=Channel-Input_Capture1_from_TI1
-USART1.IPParameters=VirtualMode-Asynchronous
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+TIM4.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM4.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM4.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-VP_ADC2_OPAMP_INTERNAL2.Mode=IN-OPAMP2
-VP_ADC2_OPAMP_INTERNAL2.Signal=ADC2_OPAMP_INTERNAL2
-VP_ADC2_OPAMP_INTERNAL3.Mode=IN-OPAMP3
-VP_ADC2_OPAMP_INTERNAL3.Signal=ADC2_OPAMP_INTERNAL3
-VP_ADC5_OPAMP_INTERNAL4.Mode=IN-OPAMP4
-VP_ADC5_OPAMP_INTERNAL4.Signal=ADC5_OPAMP_INTERNAL4
-VP_ADC5_OPAMP_INTERNAL5.Mode=IN-OPAMP5
-VP_ADC5_OPAMP_INTERNAL5.Signal=ADC5_OPAMP_INTERNAL5
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_ADC5_TempSens_Input.Mode=IN-TempSens
 VP_ADC5_TempSens_Input.Signal=ADC5_TempSens_Input
 VP_ADC5_Vref_Input.Mode=IN-Vrefint
@@ -544,8 +457,6 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
